[package]
name = "pdf_forms"
version = "0.1.1"
authors = [
    "Jake <jsandler18@gmail.com>",
    "Malte <voos.malte@gmail.com>",
    "Emulator000 <emulator@hotmail.it>",
]
description = "A library for programatically filling out pdf forms"
repository = "https://github.com/Emulator000/pdf_form"
edition = "2021"
readme = "README.md"
keywords = ["pdf_form", "pdf", "form", "forms", "field"]
license = "MIT"
exclude = [".idea"]

[dependencies]
bitflags = "^1.2"
lopdf = "0.34.0"
thiserror = "2"
